# raytracing

./: .gitignore  CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  colour.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  perlin.h  quad.h  ray.h  raytracing.h  rtw_stb_image.h  shapes.h  sphere.h  texture.h  vec3.h
.github/workflows/: free-compute-image.yml  free-compute-video.yml  free-compute.yml
images/: anti_aliasing.ppm  gamut.ppm
images/ppm/: blur.ppm  gamma_corrected_gamut.ppm
